--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
 
                 <div class="prose prose-lg prose-slate dark:prose-invert text-slate-600 dark:text-slate-300 leading-relaxed space-y-6 flex-1">
                     <p>I love solving problems.</p>
-                    <p>My path hasn't been straight. While many start with a corporate career, I started by knocking on doors. I convinced business owners to trust me with their marketing, and to my own amazement, it worked. So... I learned relationship building the hard way, without a safety net.</p>
-                    <p>Eventually, that curiosity led me to <span class="font-semibold text-slate-900 dark:text-white">Dialectica</span>, where I had the opportunity to support the world's top strategy firms (like <span class="font-semibold text-slate-900 dark:text-white">BCG</span> and <span class="font-semibold text-slate-900 dark:text-white">Bain</span>) on M&A deals ranging from $5M to over $1B.</p>
+                    <p>While many start with a corporate career, I started by going on a solo adventure. I convinced business owners to trust me with their marketing, and to my own amazement, it worked. So... I learned relationship building the hard way.</p>
+                    <p>Eventually, that led me to <span class="font-semibold text-slate-900 dark:text-white">Dialectica</span>, where I had the opportunity to support the world's top strategy firms (like <span class="font-semibold text-slate-900 dark:text-white">BCG</span> and <span class="font-semibold text-slate-900 dark:text-white">Bain</span>) on M&A deals ranging from $5M to over $1B.</p>
                     <p>For me, the drive is the same whether I'm helping a founder scale a startup or working with BCG on M&A for a billion-dollar acquisition. I love looking past the surface level, finding the <span class="font-semibold text-slate-900 dark:text-white">actual</span> problem, and solving it.</p>
                     <p class="text-sm text-slate-500 dark:text-slate-400 italic">You can check out my Case Studies below to see how I think.</p>
 
